# Automaton

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  automaton.cpp  automaton.hpp
tests/: CMakeLists.txt  test.cpp
tests/txt/DKA/: input2.txt
tests/txt/MPDKA/: input1.txt  input2.txt
tests/txt/NKA/: input1.txt  input2.txt
tests/txt/NKA_without_eps/: input1.txt
tests/txt/PDKA/: input1.txt  input2.txt  input3.txt  input4.txt
